--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,16 +27,16 @@
   //--background-start-rgb: 214, 219, 220;
   //--background-end-rgb: 255, 255, 255;
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 14, 20, 28;
-  --background-end-rgb: 14, 20, 28;
+  --background-start-rgb: 34, 50, 58;
+  --background-end-rgb: 14, 30, 38;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-    to bottom,
-    rgb(var(--background-start-rgb)),
-    rgb(var(--background-end-rgb))
+    to left,
+    rgb(var(--background-end-rgb)),
+    rgb(var(--background-start-rgb))
   ) !important;
 }
 .ant-layout {
@@ -58,13 +58,17 @@ li:active,
 .ant-switch-checked,
 .ant-skeleton-title,
 .ant-skeleton-paragraph > li {
-  background-color: #630436 !important;
+  background-color: #004c0a !important;
+  color: #00ff1c !important;
+}
+.ant-menu-item-selected>span>img {
+  filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
 }
 h1,
 h2,
 h3 {
   color: white !important;
-  text-shadow: 0 0 8px #630436, 0 0 8px #630436, 0 0 8px #630436;
+  text-shadow: 0 0 8px #00ff1c, 0 0 8px #00ff1c, 0 0 8px #00ff1c;
 }
 .ant-card-body {
   color: white !important;
@@ -76,11 +80,11 @@ h3 {
 .ant-input,
 .ant-input-number {
   color: white !important;
-  border-color: #630436 !important;
+  border-color: #00ff1c !important;
   background-color: rgba(99, 4, 54, 0.2) !important;
 }
 footer > a {
-  color: #630436 !important;
+  color: #00ff1c !important;
 }
 .ant-empty-description,
 .ant-input-number-input {
@@ -92,16 +96,16 @@ footer > a {
 }
 .ant-table-cell-row-hover {
   color: white !important;
-  background-color: #630436 !important;
+  background-color: #00ff1c !important;
 }
 .ant-input-group-addon,
 .ant-input-number-group-addon {
   color: white !important;
-  background-color: #630436 !important;
-  border-color: #630436 !important;
+  background-color: #00ff1c !important;
+  border-color: #00ff1c !important;
 }
 ::selection {
-  background: #30011a;
+  background: #004c0a;
 }
 .white-placeholder::placeholder {
   color: white !important;
