--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,7 @@ h1,
 h2,
 h3 {
   color: white !important;
-  text-shadow: 0 0 8px #00ff1c, 0 0 8px #00ff1c, 0 0 8px #00ff1c;
+  text-shadow: 0 0 4px #00ff1c, 0 0 4px #00ff1c, 0 0 4px #00ff1c;
 }
 .ant-card-body {
   color: white !important;
@@ -81,7 +81,7 @@ h3 {
 .ant-input-number {
   color: white !important;
   border-color: #00ff1c !important;
-  background-color: rgba(99, 4, 54, 0.2) !important;
+  background-color: #004c0a20 !important;
 }
 footer > a {
   color: #00ff1c !important;
@@ -96,7 +96,7 @@ footer > a {
 }
 .ant-table-cell-row-hover {
   color: white !important;
-  background-color: #00ff1c !important;
+  background-color: #141414 !important;
 }
 .ant-input-group-addon,
 .ant-input-number-group-addon {
